# eligibility-signposting-api-specification

./: .env  .gitignore  .gitleaksignore  .tool-versions  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: DEPLOYMENT_README.md
.github/actions/lint-and-validate-specification/: action.yaml
.github/workflows/: cicd-1-pull-request.yaml  cicd-2-publish.yaml  cicd-3-deploy.yaml  dev_sandbox_publish_deploy.yaml  preprod_publish_deploy.yaml  prod_publish_deploy.yaml  publish-specification.yaml  publish_sandbox.yaml  pull-request.yaml  stage-1-commit.yaml  stage-2-test.yaml  stage-3-build.yaml  stage-4-acceptance.yaml
docs/: README.md  mock-authentication-how-to-use.md
sandbox/: Dockerfile  HealthStatusEndpoint.json  Makefile  README.md  app.py  pyproject.toml
sandbox/specification/: eligibility-signposting-api.json
scripts/: check-aws-account.sh  mock-authentication.py
specification/: README.md  eligibility-signposting-api.yaml
specification/.proxygen/: credentials-prod.yaml  credentials-ptl.yaml  credentials.yaml  settings-ptl.yaml
specification/components/security/: security-preprod.yaml  security-prod.yaml  security-sandbox.yaml  security.yaml
specification/postman/: collection.json
specification/proxygen-cli/: README.md
specification/tmp/working/: tmpCollection.json
specification/x-nhsd-apim/: access-dev.yaml  access-internal-dev.yaml  access-preprod.yaml  access-prod.yaml  access-test.yaml  access.yaml  ratelimit-internal-dev.yaml  ratelimit-preprod.yaml  ratelimit.yaml  target-dev.yaml  target-internal-dev.yaml  target-preprod.yaml  target-prod.yaml  target-sandbox.yaml  target-test.yaml  target.yaml
(+1 files in other folders)
